Update binding
Signed-off-by: Marcel Goerentz <57457529+marcelGoerentz@users.noreply.github.com>